--- a/assets/css/style..css
+++ b/assets/css/style..css
@@ -39,6 +39,7 @@ hr {
 .headerName {
   border-radius: 20px;
   background-color: #4aaaa5;
+  box-shadow: 6px 6px 10px #b3b1b1;
   text-align: center;
   width: 250px;
   height: 46px;
@@ -75,15 +76,30 @@ hr {
   padding: 10px 10px;
   text-align: center;
 }
+.icons {
+  margin: 0% 0% 0% 6%;
+}
+.icon-btn {
+  transform: scale(1);
+  transition: 0.2s;
+  box-shadow: 6px 6px 10px #b3b1b1;
+  border-radius: 50px;
+  margin-left: 5px;
+}
+.icon-btn:hover {
+  transform: scale(1.2);
+  transition: 0.4s;
+}
 #main-bio,
 #contact-info,
 #bio-image {
   float: left;
+  box-shadow: 6px 6px 10px #b3b1b1;
+  border-radius: 30px;
 }
 #main-bio {
   margin-top: 20px;
   border: 2px solid #dddddd;
-  border-radius: 30px;
   background-color: #ffffff;
   opacity: 0.8;
   padding: 10px 20px;
@@ -94,7 +110,6 @@ hr {
   margin-top: 20px;
   margin-left: 10px;
   border: 2px solid #dddddd;
-  border-radius: 30px;
   background-color: #ffffff;
   opacity: 0.7;
   padding: 10px 10px;
@@ -135,11 +150,6 @@ a:hover {
   grid-gap: 20px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 190px 190px 190px;
-
-  /* display: grid;
-  grid-gap: 4px 4px;
-  grid-template-columns: auto auto auto;
-  background-color: #ffffff;*/
 }
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
